--- a/public/css/front.css
+++ b/public/css/front.css
@@ -13,7 +13,9 @@ html {
   -webkit-text-size-adjust: 100%; }
 
 body {
-  margin: 0; }
+  margin: 0 auto;
+  width: 1280px;
+}
 
 article,
 aside,
@@ -1519,7 +1521,7 @@ pre code {
 
 .container {
   max-width: 1920px;
-  width: 99%;
+  width: 100%;
 }
 
 .container-fluid {
@@ -1533,9 +1535,7 @@ pre code {
 .container-fluid:after {
   clear: both; }
 
-.row {
-  margin-left: -15px;
-  margin-right: -15px; }
+.row { }
 .row:before, .row:after {
   content: " ";
   display: table; }
@@ -3170,7 +3170,7 @@ tbody.collapse.in {
 
 .dropdown-menu {
   position: absolute;
-  top: 100%;
+  top: 73%;
   left: 0;
   z-index: 1000;
   display: none;
@@ -3182,11 +3182,12 @@ tbody.collapse.in {
   font-size: 14px;
   text-align: left;
   background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-left: 1px solid #ccc;
+  border-right: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  background-clip: padding-box; }
+  background-clip: padding-box;
+  width: 100%;}
 .dropdown-menu.pull-right {
   right: 0;
   left: auto; }
@@ -3285,6 +3286,10 @@ tbody.collapse.in {
   .navbar-right .dropdown-menu-left {
     left: 0;
     right: auto; } }
+
+.dropdown:hover > .dropdown-menu {
+  display: block;
+}
 
 .btn-group,
 .btn-group-vertical {
@@ -3576,7 +3581,7 @@ tbody.collapse.in {
   border-radius: .3rem;}
 .nav > li > a:hover, .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee; }
+   }
 .nav > li.disabled > a {
   color: #777777; }
 .nav > li.disabled > a:hover, .nav > li.disabled > a:focus {
@@ -3679,8 +3684,7 @@ tbody.collapse.in {
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 20px;
-  border: 1px solid transparent; }
+}
 .navbar:before, .navbar:after {
   content: " ";
   display: table; }
@@ -3849,8 +3853,26 @@ tbody.collapse.in {
     margin: 0; }
   .navbar-nav > li {
     float:left;
-    padding: 7px;
+    padding-right: 7px;
+    padding-left: 7px;
+    padding-bottom: 25px;
+    padding-top: 25px;
      }
+
+  .navbar-nav > li:hover:before {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    border-top: 10px solid #091634;
+  }
+  .navbar-nav > li.active:before {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    border-top: 10px solid #13438C;
+  }
+
+
   .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px; } }
@@ -3957,8 +3979,6 @@ tbody.collapse.in {
   .navbar-right ~ .navbar-right {
     margin-right: 0; } }
 
-.navbar-default {
-  border-color: #e7e7e7; }
 .navbar-default .navbar-brand {
   color: #777; }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
@@ -3968,13 +3988,10 @@ tbody.collapse.in {
   color: #777; }
 .navbar-default .navbar-nav > li > a {
   color: #777; }
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #fff;
-  background-color: transparent;
-}
+
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   color: #555;
-  background-color: #e7e7e7; }
+}
 .navbar-default .navbar-nav > .disabled > a, .navbar-default .navbar-nav > .disabled > a:hover, .navbar-default .navbar-nav > .disabled > a:focus {
   color: #ccc;
   background-color: transparent; }
@@ -5419,194 +5436,183 @@ button.close {
   border-left-color: #fff;
   bottom: -10px; }
 
-.carousel {
-  position: relative; }
 
-.carousel-inner {
-  position: relative;
-  overflow: hidden;
-  width: 100%; }
-.carousel-inner > .carousel-item {
-  display: none;
-  position: relative;
-  -webkit-transition: 0.6s ease-in-out left;
-  transition: 0.6s ease-in-out left; }
-.carousel-inner > .carousel-item > img,
-.carousel-inner > .carousel-item > a > img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  line-height: 1; }
-@media all and (transform-3d), (-webkit-transform-3d) {
-  .carousel-inner > .carousel-item {
-    -webkit-transition: -webkit-transform 0.6s ease-in-out;
-    transition: -webkit-transform 0.6s ease-in-out;
-    transition: transform 0.6s ease-in-out;
-    transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000px;
-    perspective: 1000px; }
-  .carousel-inner > .carousel-item a, .carousel-inner > .carousel-item img{
-    display: inline-block;
+.carousel{
+  position:relative
+}
+.carousel-inner{
+  position:relative;
+  width:100%;
+  overflow:hidden
+}
+.carousel-inner>.item{
+  position:relative;
+  display:none;
+  -webkit-transition:.6s ease-in-out left;
+  -o-transition:.6s ease-in-out left;
+  transition:.6s ease-in-out left
+}
+.carousel-inner>.item>a>img,.carousel-inner>.item>img{
+  line-height:1
+}
+@media all and (transform-3d),(-webkit-transform-3d){
+  .carousel-inner>.item{
+    -webkit-transition:-webkit-transform .6s ease-in-out;
+    -o-transition:-o-transform .6s ease-in-out;
+    transition:transform .6s ease-in-out;
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+    -webkit-perspective:1000px;
+    perspective:1000px
   }
-
-  .carousel-inner > .carousel-item.next, .carousel-inner > .carousel-item.active.right {
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
-    left: 0; }
-  .carousel-inner > .carousel-item.prev, .carousel-inner > .carousel-item.active.left {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-    left: 0; }
-  .carousel-inner > .carousel-item.next.left, .carousel-inner > .carousel-item.prev.right, .carousel-inner > .carousel-item.active {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    left: 0; } }
-.carousel-inner > .active,
-.carousel-inner > .next,
-.carousel-inner > .prev {
-  display: block; }
-.carousel-inner > .active {
-  left: 0; }
-.carousel-inner > .next,
-.carousel-inner > .prev {
-  position: absolute;
-  top: 0;
-  width: 100%; }
-.carousel-inner > .next {
-  left: 100%; }
-.carousel-inner > .prev {
-  left: -100%; }
-.carousel-inner > .next.left,
-.carousel-inner > .prev.right {
-  left: 0; }
-.carousel-inner > .active.left {
-  left: -100%; }
-.carousel-inner > .active.right {
-  left: 100%; }
-
-.carousel-control {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 15%;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-  font-size: 20px;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  background-color: transparent; }
-.carousel-control.left {
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1); }
-.carousel-control.right {
-  left: auto;
-  right: 0;
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.5) 100%);
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.5) 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1); }
-.carousel-control:hover, .carousel-control:focus {
-  outline: 0;
-  color: #fff;
-  text-decoration: none;
-  opacity: 0.9;
-  filter: alpha(opacity=90); }
-.carousel-control .icon-prev,
-.carousel-control .icon-next,
-.carousel-control .glyphicon-chevron-left,
-.carousel-control .glyphicon-chevron-right {
-  position: absolute;
-  top: 50%;
-  margin-top: -10px;
-  z-index: 5;
-  display: inline-block; }
-.carousel-control .icon-prev,
-.carousel-control .glyphicon-chevron-left {
-  left: 50%;
-  margin-left: -10px; }
-.carousel-control .icon-next,
-.carousel-control .glyphicon-chevron-right {
-  right: 50%;
-  margin-right: -10px; }
-.carousel-control .icon-prev,
-.carousel-control .icon-next {
-  width: 20px;
-  height: 20px;
-  line-height: 1;
-  font-family: serif; }
-.carousel-control .icon-prev:before {
-  content: '\2039'; }
-.carousel-control .icon-next:before {
-  content: '\203a'; }
-
-.carousel-indicators {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  z-index: 15;
-  width: 60%;
-  margin-left: -30%;
-  padding-left: 0;
-  list-style: none;
-  text-align: center; }
-.carousel-indicators li {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 1px;
-  text-indent: -999px;
-  border: 1px solid #fff;
-  border-radius: 10px;
-  cursor: pointer;
-  background-color: #000 \9;
-  background-color: transparent; }
-.carousel-indicators .active {
-  margin: 0;
-  width: 12px;
-  height: 12px;
-  background-color: #fff; }
-
-.carousel-caption {
-  position: absolute;
-  left: 15%;
-  right: 15%;
-  bottom: 20px;
-  z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
-.carousel-caption .btn {
-  text-shadow: none; }
-
-@media screen and (min-width: 768px) {
-  .carousel-control .glyphicon-chevron-left,
-  .carousel-control .glyphicon-chevron-right,
-  .carousel-control .icon-prev,
-  .carousel-control .icon-next {
-    width: 30px;
-    height: 30px;
-    margin-top: -10px;
-    font-size: 30px; }
-  .carousel-control .glyphicon-chevron-left,
-  .carousel-control .icon-prev {
-    margin-left: -10px; }
-  .carousel-control .glyphicon-chevron-right,
-  .carousel-control .icon-next {
-    margin-right: -10px; }
-  .carousel-caption {
-    left: 20%;
-    right: 20%;
-    padding-bottom: 30px; }
-  .carousel-indicators {
-    bottom: 20px; } }
+  .carousel-inner>.item.active.right,.carousel-inner>.item.next{
+    left:0;
+    -webkit-transform:translate3d(100%,0,0);
+    transform:translate3d(100%,0,0)
+  }
+  .carousel-inner>.item.active.left,.carousel-inner>.item.prev{
+    left:0;
+    -webkit-transform:translate3d(-100%,0,0);
+    transform:translate3d(-100%,0,0)
+  }
+  .carousel-inner>.item.active,.carousel-inner>.item.next.left,.carousel-inner>.item.prev.right{
+    left:0;
+    -webkit-transform:translate3d(0,0,0);
+    transform:translate3d(0,0,0)
+  }
+}
+.carousel-inner>.active,.carousel-inner>.next,.carousel-inner>.prev{
+  display:block
+}
+.carousel-inner>.active{
+  left:0
+}
+.carousel-inner>.next,.carousel-inner>.prev{
+  position:absolute;
+  top:0;
+  width:100%
+}
+.carousel-inner>.next{
+  left:100%
+}
+.carousel-inner>.prev{
+  left:-100%
+}
+.carousel-inner>.next.left,.carousel-inner>.prev.right{
+  left:0
+}
+.carousel-inner>.active.left{
+  left:-100%
+}
+.carousel-inner>.active.right{
+  left:100%
+}
+.carousel-control{
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  width:15%;
+  font-size:20px;
+  color:#fff;
+  text-align:center;
+  text-shadow:0 1px 2px rgba(0,0,0,.6);
+  background-color:rgba(0,0,0,0);
+  filter:alpha(opacity=50);
+  opacity:.5
+}
+.carousel-control.left{
+  background-image:-webkit-linear-gradient(left,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
+  background-image:-o-linear-gradient(left,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
+  background-image:-webkit-gradient(linear,left top,right top,from(rgba(0,0,0,.5)),to(rgba(0,0,0,.0001)));
+  background-image:linear-gradient(to right,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
+  background-repeat:repeat-x
+}
+.carousel-control.right{
+  right:0;
+  left:auto;
+  background-image:-webkit-linear-gradient(left,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
+  background-image:-o-linear-gradient(left,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
+  background-image:-webkit-gradient(linear,left top,right top,from(rgba(0,0,0,.0001)),to(rgba(0,0,0,.5)));
+  background-image:linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
+  background-repeat:repeat-x
+}
+.carousel-control:focus,.carousel-control:hover{
+  color:#fff;
+  text-decoration:none;
+  filter:alpha(opacity=90);
+  outline:0;
+  opacity:.9
+}
+.carousel-control .glyphicon-chevron-left,.carousel-control .glyphicon-chevron-right,.carousel-control .icon-next,.carousel-control .icon-prev{
+  position:absolute;
+  top:50%;
+  z-index:5;
+  display:inline-block;
+  margin-top:-10px
+}
+.carousel-control .glyphicon-chevron-left,.carousel-control .icon-prev{
+  left:50%;
+  margin-left:-10px
+}
+.carousel-control .glyphicon-chevron-right,.carousel-control .icon-next{
+  right:50%;
+  margin-right:-10px
+}
+.carousel-control .icon-next,.carousel-control .icon-prev{
+  width:20px;
+  height:20px;
+  font-family:serif;
+  line-height:1
+}
+.carousel-control .icon-prev:before{
+  content:'\2039'
+}
+.carousel-control .icon-next:before{
+  content:'\203a'
+}
+.carousel-indicators{
+  position:absolute;
+  bottom:10px;
+  left:50%;
+  z-index:15;
+  width:60%;
+  padding-left:0;
+  margin-left:-30%;
+  text-align:center;
+  list-style:none
+}
+.carousel-indicators li{
+  display:inline-block;
+  width:10px;
+  height:10px;
+  margin:1px;
+  text-indent:-999px;
+  cursor:pointer;
+  background-color:#000\9;
+  background-color:rgba(0,0,0,0);
+  border:1px solid #fff;
+}
+.carousel-indicators .active{
+  background-color:#fff
+}
+.carousel-caption{
+  position:absolute;
+  right:15%;
+  bottom:20px;
+  left:15%;
+  z-index:10;
+  padding-top:20px;
+  padding-bottom:20px;
+  color:#fff;
+  text-align:center;
+  text-shadow:0 1px 2px rgba(0,0,0,.6)
+}
+.carousel-caption .btn{
+  text-shadow:none
+}
 
 .clearfix:before, .clearfix:after {
   content: " ";
@@ -5828,7 +5834,6 @@ button.close {
  */
 body {
   font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-  background: url(../img/bg_body.png) repeat-y top center #000000;
 }
 
 h1,
@@ -5940,19 +5945,15 @@ footer {
     font-weight: 400;
     letter-spacing: 3px;
     color: #fff; }
+  .navbar-default{
+    border-bottom: 4px solid #BFCFDB;
+  }
   .navbar {
     border-radius: 0; }
   .navbar-header {
     display: none; }
   .navbar {
     min-height: 0; }
-  .navbar-default {
-    border-left:none;
-    border-right: none;
-    border-top: 1px solid rgba(255, 255, 255, 0.9);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.9);
-    margin: 10px;
-  }
   .nav > li > a {
     padding: 10px; }
   .navbar-nav > li > a {
@@ -9146,7 +9147,7 @@ footer, .fedback-button {
   left: 48%;
 }
 
-.dropdown-toggle:after{
+/* .dropdown-toggle:after{
   content:'';
   display: inline-block;
   width: 0;
@@ -9157,7 +9158,7 @@ footer, .fedback-button {
   border-top: 4px solid \9;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
-}
+} */
 .sliderBlock > div {
   margin-bottom: 0px;
   padding: 25px;
@@ -9266,4 +9267,31 @@ footer, .fedback-button {
 .modal-footer {
   z-index: 1;
   position: relative;
+}
+.main-prod{
+  height: 440px;
+}
+.main-prod .col-lg-6, .main-prod .col-lg-3, .main-prod .col-lg-3, .main-prod .col-lg-4, .main-prod .col-lg-5, .main-prod .col-lg-12{
+  margin: 0;
+  padding: 0;
+}
+.fedback{
+  height: 118px;
+}
+.fedback span{
+  display: inline-block;
+}
+.fedback .span1{
+  border-bottom: 100px solid red;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  height: 0;
+  width: 100px;
+}
+.fedback .span2{
+  border-bottom: 100px solid red;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  height: 0;
+  width: 100px;
 }
