--- a/public/css/front.css
+++ b/public/css/front.css
@@ -5913,7 +5913,6 @@ hr {
 
 footer {
   padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 
@@ -9133,7 +9132,7 @@ footer .img-fluid{
 }
 footer, .fedback-button {
   padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  margin: 30px 0 0 0;
 }
 .fedback-button {
   position: relative;
@@ -9269,7 +9268,7 @@ footer, .fedback-button {
   position: relative;
 }
 .main-prod{
-  height: 440px;
+
 }
 .main-prod .col-lg-6, .main-prod .col-lg-3, .main-prod .col-lg-3, .main-prod .col-lg-4, .main-prod .col-lg-5, .main-prod .col-lg-12{
   margin: 0;
@@ -9282,16 +9281,164 @@ footer, .fedback-button {
   display: inline-block;
 }
 .fedback .span1{
-  border-bottom: 100px solid red;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  height: 0;
-  width: 100px;
+  background: #091634;
+  width: 50%;
+  float: left;
+  height: 140px;
+}
+.fedback .span1 span{
+  color: #fff;
+  font-size: 26px;
+  width: 242px;
+  padding-top: 30px;
 }
 .fedback .span2{
-  border-bottom: 100px solid red;
+  border-top: 140px solid #F3F5F7;
   border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
+  /* border-right: 50px solid transparent; */
+  height: 140px;
+  position: absolute;
+  right: 0px;
+  width: 59%;
+}
+.feedbackForm{
+  position: absolute;
+  top: -100px;
+}
+.feedbackForm .controls{
+  float: left;
+  margin-right: 10px;
+}
+.feedbackForm .controls .form-control{
+  border: 1px solid #13438C;
+  border-radius: 0px;
+  padding: 1.2rem 1rem;
+}
+.feedbackForm .control-group .btn.form-button{
+  background: #091634;
+  color: #9EA0A7;
+  border: none;
+  border-radius: 0;
+  height: 48px;
+  padding: 0 40px;
+  font-size: 18px;
+  position: relative;
+}
+.feedbackForm .control-group .btn.form-button:before{
+  content: '';
+  position: absolute;
+  width: 0;
   height: 0;
-  width: 100px;
+  border-top: 24px solid transparent;
+  border-left: 10px solid #091634;
+  border-bottom: 24px solid transparent;
+  top: 0;
+  right: -10px;
+}
+
+.hex {
+  overflow: hidden;
+  visibility: hidden;
+  -webkit-transform: rotate(120deg);
+  -moz-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  -o-transform: rotate(120deg);
+  transform: rotate(120deg);
+}
+.images1{
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: rotate(-60deg);
+  -moz-transform: rotate(-60deg);
+  -ms-transform: rotate(-60deg);
+  -o-transform: rotate(-60deg);
+  transform: rotate(-60deg);
+}
+.images2{
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  visibility: visible;
+  -webkit-transform: rotate(-60deg);
+  -moz-transform: rotate(-60deg);
+  -ms-transform: rotate(-60deg);
+  -o-transform: rotate(-60deg);
+  transform: rotate(-60deg);
+}
+
+.one {
+  width: 477px;
+  height: 200px;
+  margin: 0 0 0 -80px;
+}
+.item1{
+  transform: rotate(131deg);
+}
+.item2{
+  transform: rotate(97deg);
+}
+.item3{
+  transform: rotate(165deg);
+}
+.design-name{
+  width: 213px;
+  margin: 0 auto;
+  margin-top: 31px;
+  font-weight: bold;
+  font-size: 16px;
+}
+.design-head{
+  color: #003399;
+  font-size: 80px;
+  margin: 62px 0 47px 0;
+}
+#map {
+  width: 100%;
+  height: 500px;
+  color: #000;
+}
+.mainMapBlock{
+  height: 500px; margin: 50px 0 0 0;
+}
+#map iframe + div, #map .gmnoprint, #map .gmnoprint.gm-style-cc + button{
+  display: none !important;
+}
+.mainMapBlock-head{
+  color: #818181;
+  margin-top: 30px;
+}
+.mainMapBlock-text{
+  font-size: 33px;
+  margin-bottom: 20px;
+}
+.mainMapBlock .col-lg-3{
+  text-align: left;
+}
+.btn-wite{
+  background: none;
+  border: 1px solid #4E586D;
+  border-radius: 0;
+}
+footer{
+  height: 90px;
+}
+.footer-logo-block{
+  padding-top: 17px;
+}
+.footer-right-copy{
+  position: relative;
+  text-align: right;
+  padding-right: 60px;
+  height: 74px;
+  padding-top: 17px;
+}
+.footer-right-copy .coppy{
+
+}
+.footer-right-copy .flag{
+  position: absolute;
+  bottom: 0;
+  right: 53px;
 }
