--- a/public/css/front.css
+++ b/public/css/front.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 @import url(http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Georgia:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
@@ -5833,7 +5834,7 @@ button.close {
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
-  font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Georgia","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 h1,
@@ -9399,10 +9400,15 @@ footer, .fedback-button {
   height: 500px;
   color: #000;
 }
+#mapContact {
+  width: 100%;
+  height: 800px;
+  color: #000;
+}
 .mainMapBlock{
   height: 500px; margin: 50px 0 0 0;
 }
-#map iframe + div, #map .gmnoprint, #map .gmnoprint.gm-style-cc + button{
+#map iframe + div, #map .gmnoprint, #map .gmnoprint.gm-style-cc + button, #mapContact iframe + div, #mapContact .gmnoprint, #mapContact .gmnoprint.gm-style-cc + button{
   display: none !important;
 }
 .mainMapBlock-head{
@@ -9441,4 +9447,45 @@ footer{
   position: absolute;
   bottom: 0;
   right: 53px;
+}
+.con-head{
+  font-size: 48px;
+  color: #003399;
+  letter-spacing: 2px;
+  padding: 25px 0 25px 25px;
+}
+.con-text{
+  padding: 0px 0 25px 32px;
+  font-size: 18px;
+}
+.con-tel{
+  padding: 0px 0 25px 32px;
+  font-size: 36px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.con-hr{
+  background: #D2DDE6;
+  width: 100%;
+  height: 1px;
+}
+.con-feedback{
+  margin-top: 41px;
+}
+.con-feedback input, .con-feedback textarea{
+  border: 1px solid #13438C;
+  border-radius: 0;
+}
+.con-feedback input {
+  width: 97%;
+}
+.con-feedback textarea {
+  width: 99%;
+  resize: none;
+}
+.con-feedback .form-button {
+  background: #091634;
+  border-radius: 0;
+  color: #B5B7BC;
+  margin-top: 10px;
 }
